# Mark3

./: .gitignore  DEBUG_SESSION.md  INSTALL_PYAUDIO.md  LICENSE  README.md  TROUBLESHOOTING_X11.md  install_pyaudio.sh  launch_all.sh  requirements.txt
config/: CALIBRATION_README.md  GPU_SETUP.md  QUICK_START_TRAINING.md  YOLO_FINETUNING_GUIDE.md  calibrate_camera.py  camera_calibration.yaml  camera_calibration_example.yaml  create_dataset_structure.sh  test_midas.py  test_service_detection.py  train_tools_detector.py  verify_dataset.py
src/CameraNode/: package.xml  setup.cfg  setup.py
src/CameraNode/CameraNode/: CameraNode.py
src/IKsolverNode/: package.xml  setup.cfg  setup.py
src/IKsolverNode/IKsolverNode/: IKsolverNode.py  IKsolverNode_with_orientation.py  dh_utils.py  ik_client.py  kinematics.py
src/IKsolverNode/launch/: launch.py
src/IKsolverNode/urdf/meshes/: Base.stl  ElbowBottom.stl  ElbowGripper.stl  ElbowTop.stl  Gripper.stl  WristBottom.stl  WristGripper.stl  WristTop.stl
src/Interface/: package.xml  setup.cfg  setup.py
src/Interface/Interface/: Interface.py  robot_3d_viewer.py
src/ObjectDetectionNode/: package.xml  setup.cfg  setup.py
src/ObjectDetectionNode/ObjectDetectionNode/: ObjectDetectionNode.py  object_detection_launcher.sh  object_detection_node_wrapper.py
src/ObjectDetectionNode/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/audio_capture_node/: package.xml  setup.cfg  setup.py
src/audio_capture_node/audio_capture_node/: audio_capture_node.py
src/ik_service_interface/: CMakeLists.txt  package.xml
src/ik_service_interface/srv/: SolveIK.srv
src/object_detection_interface/: CMakeLists.txt  package.xml
src/object_detection_interface/srv/: DetectObject3D.srv
src/state_publisher/: package.xml  setup.py
src/state_publisher/state_publisher/: state_publisher.py  urdf_reloader.py
src/system/: package.xml  setup.py
src/system/launch/: robot_backend.launch.py  robot_system.launch.py
src/voice_command_node/: package.xml  setup.cfg  setup.py
src/voice_command_node/voice_command_node/: voice_command_node.py
