<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_command_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="your_actual_renardd.axel@gmail.com">axel</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ik_service_interface</exec_depend>
  <exec_depend>object_detection_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>speech_recognition</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
